--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*the tennis balls and blue banner*/
 .header{
     display:flex;
     flex-direction: column;
@@ -6,6 +7,8 @@
 }
 .banner {
     display:flex;
+    flex-direction:row;
+    justify-content:flex-end;
     background-color:#004AAD;
     height: 60px;
     border:2px solid red;
@@ -14,6 +17,54 @@
     display:flex;
     width:1000px;
     align-self:center
+}
+
+/*the sign in box*/
+.signin {
+    display:flex;
+    color:white;
+    background-color: #004AAD;
+    border-color: white;
+    margin:10px;
+    padding:10px;
+    align-self:center;
+    cursor: pointer
+}
+.boxes {
+    position: absolute;
+    background: white;
+    width: 400px;
+    padding: 1em 2em;
+    border-radius: 4px;
+}
+.modal {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(200, 200, 200, 0.325);
+    transition: all 0.4s;
+    visibility: hidden;
+    opacity: 0;
+}
+.modal:target {
+    visibility: visible;
+    opacity: 1;
+}
+.box-close {
+    position: absolute;
+    top: 0;
+    right: 15px;
+    color: #fe0606;
+    text-decoration: none;
+    font-size: 30px;
+}
+.passsign {
+    margin-bottom:30px;
 }
 
 .content{
